deploy: content + styles

--- a/src/content/posts/what-is-this/what-is-this.mdx
+++ b/src/content/posts/what-is-this/what-is-this.mdx
@@ -22,21 +22,30 @@ import img3 from './blue-boot-insta-tongue.jpg';
 import img4 from './blue-boot-insta-layers.jpg';
 import img5 from './blue-boot-insta-heel.jpg';
 import img6 from './blue-boot-insta-toe.jpg';
+import ri1 from './ri1.jpg';
+import ri2 from './ri2.jpg';
+import ri3 from './ri3.jpg';
+import ri4 from './ri4.jpg';
+import ri5 from './ri5.jpg';
+import ri6 from './ri6.jpg';
+import ri7 from './ri7.jpg';
+import ri8 from './ri8.jpg';
+import ri9 from './ri9.jpg';
 
 ---
 ## TL;DR
-Project Fawn is a rethink of the classic ski boot to improve safety, access, and fit by leveraging 3D printing, Artificial intelligence, and related technologies. I’m building it in public and inviting YOU to help shape it.
+Project Fawn is a rethink of the classic ski boot to improve safety, access, and fit by leveraging 3D printing and 3D scanning, Artificial intelligence, and related technologies. I’m building it in public and inviting YOU to help shape it.
 
 ---
 
 ## ORIGINS
 I’ve been interested in ski equipment since I was a child. My journey into the ski industry began by waxing skis in the basement of a small Ohio shop called <a href="https://img1.wsimg.com/isteam/ip/20baadad-a2ad-488b-8d40-ef0d0d93fc57/sign%20n%20store.jpg/:/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Ferdl Asters</a>.
 
-I soon got deeply invested in freestyle as the twin-tip revolution of the early 2000s took hold. I helped shape and maintain one of the Midwest’s most legendary terrain parks at <a href="https://www.snowtrails.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Snow Trails</a>{" "} outside Mansfield, Ohio. I then started selling equipment and skiing for <a href="https://www.aspenskiandboard.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Aspen Ski and Board</a>{" "}while studying industrial design at The Ohio State University, where I conceptualized a Line Reactor–inspired, knee-safe, freestyle-focused ski binding system for my <a href="https://www.christrunekdesign.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">thesis</a>{" "}after blowing out my own knee on a bio 720 that drifted off line into the icy chunder lining the landing of another early Ohio terrain park. While finalizing my degree, I began working as an industrial designer at <a href="https://tridentinvents.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Trident Design</a>, where I did a great deal of concept sketching, 3D modeling and rendering, patent research, and frequent work with early industrial 3D-printed prototypes.
+I soon got deeply invested in freestyle as the twin-tip revolution of the early 2000s took hold. I helped shape and maintain one of the Midwest’s most legendary terrain parks at <a href="https://www.snowtrails.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Snow Trails</a>{" "} outside Mansfield, Ohio. I then started selling equipment and skiing for <a href="https://www.aspenskiandboard.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Aspen Ski and Board</a>{" "}while studying industrial design at The Ohio State University, where I conceptualized a Line Reactor–inspired, knee-safe, freestyle-focused ski binding system for my <a href="https://www.christrunekdesign.com/thesis-binding" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">thesis</a>{" "}after blowing out my own knee on a bio 720 that drifted off line into the icy chunder lining the landing of another early Ohio terrain park. While finalizing my degree, I began working as an industrial designer at <a href="https://tridentinvents.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Trident Design</a>, where I did a great deal of concept sketching, 3D modeling and rendering, patent research, and frequent work with early industrial 3D-printed prototypes.
 
-Upon graduating I left for Utah and worked remotely for Trident while skiing every day, clocking late-night design shifts between the epic powder days of the 2010–2011 season.
+Upon graduating I left for Utah and worked remotely for Trident while skiing every day, clocking afternoon design shifts between the epic powder days of the 2010–2011 season.
 
-Eventually that stopped making sense, and I began working at <a href="https://www.jans.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Jans Mountain Outfitters</a>{" "} in Park City, where I learned a great deal about ski-boot fitting, binding testing, and setup. I had been building <a href="https://www.christrunekdesign.com/copy-2-of-skis" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">custom longboard skateboards</a>{" "} since middle school, and I transitioned that hobby into <a href="https://www.christrunekdesign.com/copy-of-skis-1" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">ski building</a>{" "}while working at Jans’ tuning center, <a href="https://www.jans.com/rennstall-ski-tuning?srsltid=AfmBOoollP1fhhfKJ8aIlmUgagwOOkMfAJdtfMEVFMtKXW0Q_Bwp7CEA" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Rennstall </a>{" "}, at the base of Park City Resort. There I learned the black arts of race-ski tuning, and most importantly I could properly finish and tune the skis I was building, running them after hours through the grinding machines required to refine base and edges from their raw molded finish.
+Eventually that arrangement stopped making sense, and I began working at <a href="https://www.jans.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Jans Mountain Outfitters</a>{" "} in Park City, where I learned a great deal about ski-boot fitting, binding testing, and setup. I had been building <a href="https://www.christrunekdesign.com/copy-2-of-skis" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">custom longboard skateboards</a>{" "} since middle school, and I transitioned that hobby into <a href="https://www.christrunekdesign.com/copy-of-skis-1" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">ski building</a>{" "}while working at Jans’ tuning center, <a href="https://www.jans.com/rennstall-ski-tuning?srsltid=AfmBOoollP1fhhfKJ8aIlmUgagwOOkMfAJdtfMEVFMtKXW0Q_Bwp7CEA" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Rennstall </a>{" "}, at the base of Park City Resort. There I learned the ins and outs of ski tuning, and most importantly I could properly finish and tune the skis I was building, running them after hours through the grinding machines required to refine base and edges from their raw molded finish.
 
 That ski-building endeavor led to early involvement in the founding of <a href="https://www.vishnufreeski.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Vishnu Skis</a>{" "} with Emmett Davis and Kale Cipperman. after parting ways I went on to work at <a href="https://www.modaliti.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Modaliti Design</a>{" "} where I assisted on product designs for, among others, <a href="https://www.surefoot.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Surefoot Ski Boots</a>. Later—and more permanently, I went on to start <a href="https://www.daymakertouring.com/" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Daymaker Touring</a>{" "} alongside Giray Dadali, where we’ve helped thousands of people around the world get uphill on their favorite skis.
 
@@ -110,13 +119,37 @@ In parallel, I had been 3D printing a wide variety of parts on various platforms
 </div>
 
 
-On the Daymaker side we’d already ski-toured on plenty of 3D-printed prototypes, we had produced roughly 10,000 production-grade NinjaFlex TPU “bail keepers” for the Daymaker Classic, and we relied day in and out on 3D printed setup tools that replicated an adjustable boot sole, so I knew the material reality wasn’t science fiction. Around 2018–2019 I started poking at the idea of a fully 3D-printed boot. What I found indicated that the surface had been scratched, but most examples didn’t feel like new directions in performance boot design—more like tech demos for the prototyping industry.
+On the Daymaker side we’d already ski-toured on plenty of 3D-printed prototypes, we had produced roughly 10,000 production-grade NinjaFlex TPU “bail keepers” for the Daymaker Classic, and we relied day in and out on 3D printed setup tools that replicated an adjustable boot sole, so I knew the material reality wasn’t science fiction. Around 2018–2019 I started poking at the idea of a fully 3D-printed boot. What I found indicated that the surface had been scratched, but most examples didn’t feel like new directions in performance boot design— but more like tech demos for the prototyping industry.
 
-research gallery
+<div className="hscroll" aria-roledescription="carousel" aria-label="2019 3D Printed Ski Boot Research">
+  <button className="arrow left"  type="button" aria-label="Previous image" />
+  <button className="arrow right" type="button" aria-label="Next image" />
+
+  <div className="track" tabIndex={0}>
+    {[
+      [ri6, 'Industrially printed ski boot shells'],
+      [ri4, 'one piece TPU liner concepts by Tailored Fits'],
+      [ri1, 'Open source pipeline to create custom orthodic insoles using flexible filaments'],
+      [ri2, '3D printed cast concepts'],
+      [ri3, 'copslay armor boots created with desktop 3D printer'],
+      [ri5, 'photogrametry pipeline allows any camera to capture high quality 3d scan data'],
+      [ri7, 'Flexible tpu shoes'],
+      [ri8, 'Intricate aesthetic posiblities of 3D printing are demonstrated in this high heel'],
+      [ri9, 'Desktop FDM printing is inexpensive'],
+          ].map(([src, caption], i) => (
+      <figure className="item" key={i}>
+        <a href={src.src} className="full" data-caption={caption}>
+          <img src={src.src} alt={caption} loading="lazy" />
+        </a>
+        <figcaption>{caption}</figcaption>
+      </figure>
+    ))}
+  </div>
+</div>
 
 On a long flight back from Japan, I came prepared with colored paper, pencils, a soundtrack, and a question: What would a 3D-printed boot look like?
 
-Two- and three-piece ski-boot shells are the way they are because of how they are made. Injection molding imposes specific constraints that echo through their design and the experience of using them. Modern ski boots have gotten quite good—amazing, actually. But the generalist nature of the manufacturing process means no ski boot is truly fit to an individual’s foot in its entirety, and if we’re honest, the ritual of cramming your foot in and out of performance shells isn’t very fun. A custom footbed helps enormously, and boot punching and grinding can eliminate hot spots while keeping a snug, secure fit, but the reality is this level of customization is difficult to achieve and the results are highly dependent on the bootfitter’s skill.
+Two and three-piece ski boot shells are the way they are because of how they are made. Injection molding imposes specific constraints that echo through their design and the experience of using them. Modern ski boots have gotten quite good— amazing, actually. But the generalist nature of the manufacturing process means no ski boot is truly fit to an individual’s foot in its entirety, and if we’re honest, the ritual of cramming your foot in and out of performance shells isn’t very fun. A custom footbed helps enormously, and boot punching and grinding can eliminate hot spots while keeping a snug, secure fit, but the reality is this level of customization is difficult to achieve and the results are highly dependent on the bootfitter’s skill.
 
 Additive manufacturing, on the other hand, provides a very different rulebook for part design with the potential to radically reshape what a ski boot even is. With that in mind I took my first stab at sketching what a 3D-printed boot might look like.
 
@@ -185,21 +218,21 @@ When this idea was percolating, a white fawn was spotted near our parents’ hom
 </a>
 
 
-With the new baby came the nursery décor, and the forest-deer motif became a theme. I built a from neon cardstock I had lying around for printing flyers. The build used a few different colored sheets; I figured it would be neat to visualize how it was paneled. 
+With the new baby came the nursery décor, and the forest-deer motif became a theme. I built a <a href="https://paperzonevn.com/fawn-young-deer.t10017/#google_vignette" target="_blank" rel="noopener noreferrer" className="text-[#A8FFB0] hover:underline">Low Poly Fawn</a> from neon cardstock I had lying around from printing flyers. The build used a few different colored sheets; I figured it would be neat to visualize how it was paneled. 
 
-Once completed—holding the rigid paper sculpture and feeling how the whole thing flexed and snapped back into place instead of folding—the metaphors, signals, and concepts I had been picking up on all suddenly coalesced. Flat, thin pieces assembled geometrically into a large, complex 3D structure was the direction I would take.
+Once completed, holding the rigid paper sculpture and feeling how the whole thing flexed and snapped back into place instead of folding, the metaphors, signals, and concepts I had been picking up on all suddenly coalesced. Flat, thin pieces assembled geometrically into a large, complex 3D structure was the direction I would take.
 
-That insight was key to addressing the classic 3D-printing headache mentioned earlier: the Z-axis problem, where the final part is consistently strong left-to-right and front-to-back, but prone to failure up and down. This occurs because interlayer bonds aren’t typically as strong as the extruded paths that make up the layers. On low-cost printers, various issues can amplify this, and specific design features can make failure almost guaranteed compared to an injection-molded part.
+That insight was key to addressing the classic 3D-printing headache mentioned earlier: the Z-axis problem, where the final part is consistently strong left-to-right and front-to-back, but prone to failure up and down. This occurs because interlayer bonds aren’t typically as strong as the extruded paths that make up the layers. On low-cost printers, various issues can amplify this, and simple design features can fail if not properly aligned.
 
 If you think about a ski-boot shell and the forces it experiences during skiing, it’s easy to imagine how those Z-axis weaknesses could result in catastrophic failure if you simply tried to 3D print current two- or three-piece shell-wrapped boots.
 
-Now imagine the tessellated layout in the paper deer: each tile can be printed so that almost all of the forces it experiences are in the part’s relative XY plane. A precision-crafted geometric edge aligns the next tile, and this process repeats around the boot’s geometry to construct its entire structure from optimally aligned 3D-printed components. This creates essentially the most 3D-printer-friendly geometry possible, and the exterior faces end up being the most aesthetically pleasing surfaces (with vast potential for customization we can explore). By breaking the part into smaller pieces, any printing or fit errors can be identified and replaced locally instead of scrapping the whole boot. What’s more, this approach allows even basic single-material printers to achieve dual-material functionality by stacking two different print files. Keeping the geometry smaller means faster prints on smaller, less expensive machines. The low-poly design language from that green Cybertruck sketch wasn’t just an aesthetic; it was a manufacturing strategy optimized for 3D printing.
+Now imagine the tessellated layout in the paper deer transposed to a ski boot: each tile can be printed so that almost all of the forces it experiences are in the part’s relative XY plane. A precision-crafted geometric edge could align the next tile, and this process repeats around the boot’s geometry to construct its entire structure from optimally aligned 3D-printed components. This tile approach creates the most 3D-printer-friendly geometry possible, and the exterior faces of the boot ends up being the most aesthetically pleasing first layer (with vast potential for customization we can explore). By breaking the part into smaller pieces, any printing or fit errors can be identified and replaced locally instead of scrapping the whole boot. What’s more, this approach allows even basic single-material printers to achieve dual-material functionality by stacking two different print files. Keeping the geometry smaller means faster prints on smaller, less expensive machines. The low-poly design language from that green Cybertruck sketch wasn’t just an aesthetic; it was a manufacturing strategy optimized for 3D printing.
 
 ## WHERE THIS GOES NEXT?
 
-To do this right, I knew I had to build Project Fawn as a container for this work. Without an interactive home, those ideas would just sit dormant in my archives. By building an online home—separate from social-media limits and existing platforms—I can push these ideas to others who can act on them.
+To do this right, I knew I had to build Project Fawn as a container for this work. Without an interactive home, those ideas would just sit dormant in my archives. By building an online home— separate from social media limits and existing platforms, I can push these ideas to others who can also act on them.
 
-No doubt I’ve been busy over the last few years, but the big thing limiting progress was the knowledge gap required to bring a complex online project like this to life. I knew this wasn’t something that could live on a simple site-building platform, and that’s all I had experience with, so the idea sat.
+No doubt I’ve been busy over the last few years, but the big thing limiting progress in this project for me was the knowledge gap required to bring a complex online project like this to life. I knew this wasn’t something that could live on a simple site-building platform, and that’s all I had experience with, so the idea sat.
 
 With the development of artificial intelligenceo over the last few years, it’s now possible to make many of the ideas I’ve been dreaming about happen, and tools like ChatGPT have already helped me make considerable progress. The problems holding this project back are exactly the kinds of things AI excels at.
 
