--- a/src/content/posts/printed-footbeds-and-boot-parts/printed-footbeds-and-boot-parts.mdx
+++ b/src/content/posts/printed-footbeds-and-boot-parts/printed-footbeds-and-boot-parts.mdx
@@ -38,8 +38,6 @@ These are older examples i completed of printed ski boot insoles and related boo
 ></blockquote>
 
 
-
-
 <blockquote
   class="instagram-media"
   data-instgrm-permalink="https://www.instagram.com/p/B7-MchzlTlV/"
@@ -47,5 +45,5 @@ These are older examples i completed of printed ski boot insoles and related boo
   data-instgrm-captioned
 ></blockquote>
 
-
+I have more examples to add to this post and will update shortly. 
 
